# family-book

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SPEC.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: show-your-family-tree.yml
alembic/: env.py
alembic/versions/: 75d48eb17ca2_initial_schema.py  a3f7c2d89e01_add_trip_albums.py
app/: auth.py  config.py  database.py  main.py  schemas.py  seed.py
app/middleware/: security.py
app/models/: __init__.py  audit.py  auth.py  base.py  governance.py  imports.py  media.py  moments.py  notifications.py  person.py  relationships.py  trips.py
app/routes/: auth_routes.py  demo.py  health.py  media.py  moments.py  pages.py  persons.py  relationships.py  tree.py  trips.py  upload.py
app/services/: audit_service.py  auth_service.py  email_service.py  media_service.py  metadata_service.py  onboarding_service.py  site_settings.py
app/static/: manifest.json
app/templates/: admin.html  base.html  claim.html  home.html  invite.html  landing.html  login.html  people.html  (+9 more)
data/: family_tree.json
docs/: DOMAIN-SETUP.md  codex-final-review.md  codex-review.md  gemini-platform-research.md  implementation-plan.md  onboarding-spec.md  outreach-targets.md  platform-research-needed.md  vision-draft.md
locales/: en.json  es.json  ru.json
tests/: conftest.py  test_api.py  test_auth.py  test_comments.py  test_i18n_trips.py  test_metadata.py  test_models.py  test_moments.py  test_onboarding.py  test_phase1_edge_cases.py  test_reactions.py  test_trips.py  test_upload.py
(+10 files in other folders)
